@@ -1,6 +1,6 @@
 Package: mi
-Version: 0.05-1
-Date: 2008-4-12
+Version: 0.06-1
+Date: 2009-4-16
 Title: Missing Data Imputation and Model Checking
 Author: Andrew Gelman <gelman@stat.columbia.edu>, Jennifer Hill
         <jh1030@columbia.edu>, Masanao Yajima <my2167@columbia.edu>,
@@ -11,6 +11,6 @@ Depends: methods, MASS, nnet, car, arm, lme4, R2WinBUGS, abind
 Description: Missing-data imputation and model checking
 URL: http://www.stat.columbia.edu/~gelman/
 License: GPL (>= 2)
-Packaged: Mon Apr 13 02:38:44 2009; SUYS
+Packaged: Fri Apr 17 04:21:15 2009; SUYS
 Repository: CRAN
-Date/Publication: 2009-04-15 07:34:51
+Date/Publication: 2009-04-17 17:35:04
